# fix_delivery

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  Dockerfile  Makefile  README.md  docker-compose-local.yaml  pyproject.toml
migrations/: env.py
migrations/versions/: 2ae874f28bdc_add_sessions_table.py  773710fa0353_create_table.py  b5bcdedf7252_change_shipping_cost_to_string.py
src/: main.py
src/config/: settings.py
src/db/: init_db.py  session.py
src/dostavka/: main.py  settings.py
src/dostavka/api/: handlers.py  models.py  session_middleware.py  usd_rub.py
src/dostavka/celery/: celery_app.py  tasks.py
src/dostavka/core/: logging.py
src/dostavka/db/: dals.py  init_db.py  models.py  session.py
src/dostavka/redis/: redis_cache.py
src/dostavka/services/: check_session.py  ship_price.py
src/middleware/: sessions.py
src/models/: db.py
src/repositories/: packages.py  sessions.py
src/routes/: handlers.py  packages.py  usd_rub.py
src/schemas/: base.py  requests.py  responses.py
src/services/: packages.py  sessions.py  shipping.py
src/utils/: logging.py
src/utils/celery/: celery_app.py  tasks.py
src/utils/redis/: redis_cache.py
tests/: README.md  conftest.py  test_api.py  test_main.py  test_models.py  test_services.py
